syntax = "proto3";

package grpc_tutorial.proto;
// The package name is used to generate the Go package name.    
option go_package = "grpc_tutorial.proto";

import "laptop_message.proto";
import "filter_message.proto";

message CreateLaptopRequest {
    Laptop laptop = 1;
}
message CreateLaptopResponse {
    string id = 1;
}

message SearchLaptopRequest {
    Filter filter = 1;
}
message SearchLaptopResponse {
    Laptop laptop = 1;
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse){};
}